--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ background-color: rgb(0, 0, 255);
 
 
 .block {
-    background-color: rgb(241, 221, 221);
+    background-color: rgb(241, 212, 212);
     border-style: solid;
     border-width: 2px;
     border-radius: 30px;
@@ -28,24 +28,24 @@ img {
 
 }
 h2{ 
-    background-color: rgba(0, 110, 200, 0.295);
-    border-width: 1px;
+    background-color: rgba(103, 105, 107, 0.486);
     padding-left: 5px;
-    border-radius: 5px;
+    border-radius: 15px;
     padding-right: 5px;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     margin-left: 5%;
     margin-right: 5%;
     text-align: center;
 }
 
-/* mouse over link */
 a {
  text-decoration-line: none;    
- color: rgb(53, 53, 153) ;
+ color: rgb(21, 19, 155) ;
 }
-   
+a:hover {
+    color: rgb(253, 7, 7);
+  }
     
 
 
